# Cesium3DTilesConverter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_zh-CN.md  README_zh_CN.md  xmake.lua
cmake/: FindPROJ.cmake  QtRuntimeLibraryFunction.cmake
data/: Tile_+007_+078_L16_03.osgb  Tile_+007_+078_L17_000.osgb  Tile_+007_+078_L17_002.osgb  Tile_+007_+078_L17_004.osgb
data/Production_5/: metadata.xml
data/Production_5/Data/Tile_+000_+012/: Tile_+000_+012.osgb  Tile_+000_+012_L15_0u.osgb  Tile_+000_+012_L16_0uu.osgb  Tile_+000_+012_L17_0uuu.osgb  Tile_+000_+012_L18_0uuuu.osgb  Tile_+000_+012_L19_0uuuu0.osgb  Tile_+000_+012_L19_0uuuu1.osgb  Tile_+000_+012_L19_0uuuu2.osgb  Tile_+000_+012_L19_0uuuu3.osgb
data/Production_5/Data/Tile_+000_+013/: Tile_+000_+013.osgb  Tile_+000_+013_L15_0u.osgb  Tile_+000_+013_L16_0uu.osgb  Tile_+000_+013_L17_0uuu.osgb  Tile_+000_+013_L18_0uuuu.osgb  Tile_+000_+013_L19_0uuuu0.osgb  Tile_+000_+013_L19_0uuuu1.osgb  Tile_+000_+013_L19_0uuuu2.osgb  Tile_+000_+013_L19_0uuuu3.osgb  Tile_+000_+013_L19_0uuuu4.osgb  Tile_+000_+013_L19_0uuuu5.osgb  Tile_+000_+013_L19_0uuuu6.osgb  Tile_+000_+013_L19_0uuuu7.osgb
data/Production_5/Data/Tile_+000_+014/: Tile_+000_+014.osgb  Tile_+000_+014_L15_0u.osgb  Tile_+000_+014_L16_0uu.osgb  Tile_+000_+014_L17_0uuu.osgb  Tile_+000_+014_L18_0uuuu.osgb  Tile_+000_+014_L19_0uuuu0.osgb  Tile_+000_+014_L19_0uuuu1.osgb  Tile_+000_+014_L19_0uuuu2.osgb  Tile_+000_+014_L19_0uuuu3.osgb  Tile_+000_+014_L19_0uuuu4.osgb  Tile_+000_+014_L19_0uuuu5.osgb  Tile_+000_+014_L19_0uuuu6.osgb  Tile_+000_+014_L19_0uuuu7.osgb
data/Production_5/Data/Tile_+000_+015/: Tile_+000_+015.osgb  Tile_+000_+015_L15_0u.osgb  Tile_+000_+015_L16_0uu.osgb  Tile_+000_+015_L17_0uuu.osgb  Tile_+000_+015_L18_0uuuu.osgb  Tile_+000_+015_L19_0uuuu0.osgb  Tile_+000_+015_L19_0uuuu1.osgb  Tile_+000_+015_L19_0uuuu2.osgb  Tile_+000_+015_L19_0uuuu3.osgb  Tile_+000_+015_L19_0uuuu4.osgb  Tile_+000_+015_L19_0uuuu5.osgb  Tile_+000_+015_L19_0uuuu6.osgb  Tile_+000_+015_L19_0uuuu7.osgb
data/Production_5/Data/Tile_+000_+016/: Tile_+000_+016.osgb  Tile_+000_+016_L15_0u.osgb  Tile_+000_+016_L16_0uu.osgb  Tile_+000_+016_L17_0uuu.osgb  Tile_+000_+016_L18_0uuuu.osgb  (+4 more)
gdal_data/: usage  vcpkg-cmake-wrapper.cmake
include/: 3dtiles_core.h  AssetProperties.h  BaseObject.h  BaseTile.h  Batched3DModel.h  BoundingVolume.h  BoundingVolumeBox.h  BoundingVolumeRegion.h  BoundingVolumeSphere.h  CommandLineParse.h  Config.h  Config.h.in  ContentTile.h  CoordinateConvert.h  DxtImage.h  GDALWrapper.h  GeometryMesh.h  Math.h  ModelMetadata.h  OGRException.h  OSGBConvert.h  OSGBConvertJob.h  OSGBLevel.h  OSGBPageLodVisitor.h  OSGBRegion.h  OSGBuildState.h  QuadTree.h  Refine.h  RootTile.h  ShpConvert.h  ShpConvertJob.h  TileMatrix.h  TilesConvertException.h  TilesParseException.h  Tileset.h  Utils.h  dxt_img.h  gdal_tools.h  osg_converter.h  tileset.h  (+3 more)
include/Cesium3DTiles/: Asset.h  AssetProperties.h  BaseTile.h  Batched3DModel.h  BoundingVolume.h  BoundingVolumeBox.h  BoundingVolumeRegion.h  BoundingVolumeSphere.h  Content.h  Refine.h  RootTile.h  Transform.h
include/CesiumGLTF/: CesiumB3DM.h  CesiumMaterial.h  CesiumMesh.h  CesiumTexture.h
include/CesiumMath/: Cartesian3.h  Constant.h  SpatialReference.h  SpatialTransform.h
include/CesiumReadWrite/: AssetReadWriter.h  BaseTileReadWriter.h  BoundingVolumeReadWriter.h  ContentReadWriter.h  RootTileReadWriter.h
include/Commons/: GDALRegister.h  OSGSimplify.h  OSGUtil.h  TileStorage.h  TileStorageDisk.h  Version.h  Version.h.in
include/ConvertApp/: CLIParse.h
include/OSGConvert/: B3DMTile.h  OSGConvertOption.h  OSGFolder.h  OSGIndex.h  OSGLodVisitor.h  OSGMergeTopIndex.h  OSGNode.h  OSGParseVisitor.h  OSGTile.h  OSGTileMerge.h  OSGVirtualFolder.h  OSGVirtualTile.h
include/tiny_gltf/: json.hpp  stb_image.h  stb_image_write.h  tiny_gltf.h
proj_data/: cmake_install.cmake  proj-targets.cmake  proj4-targets.cmake
script/: Converter.desktop  package.sh
share/gdal_data/: vcpkg_abi_info.txt
share/proj_data/: proj-targets-debug.cmake  proj-targets-release.cmake  proj4-config-version.cmake  proj4-config.cmake  proj4-targets-debug.cmake  proj4-targets-release.cmake  vcpkg_abi_info.txt
src/: 3dtiles_core.cpp  AssetProperties.cpp  BaseTile.cpp  Batched3DModel.cpp  BoundingVolume.cpp  BoundingVolumeBox.cpp  BoundingVolumeRegion.cpp  BoundingVolumeSphere.cpp  CMakeLists.txt  ContentTile.cpp  Conveter.cpp  CoordinateConvert.cpp  DxtImage.cpp  GDALWrapper.cpp  GeometryMesh.cpp  ModelMetadata.cpp  OSGBConvert.cpp  OSGBConvertJob.cpp  OSGBLevel.cpp  OSGBPageLodVisitor.cpp  OSGBRegion.cpp  OSGBuildState.cpp  QuadTree.cpp  Refine.cpp  RootTile.cpp  ShpConvert.cpp  ShpConvertJob.cpp  TileMatrix.cpp  Tileset.cpp  dxt_img.cpp  gdal_tools.cpp  main.cpp  osg_converter.cpp  stb_image.cpp  tileset.cpp  utils.cpp
src/Cesium3DTiles/: AssetProperties.cpp  BaseTile.cpp  Batched3DModel.cpp  BoundingVolume.cpp  BoundingVolumeBox.cpp  BoundingVolumeRegion.cpp  BoundingVolumeSphere.cpp  CMakeLists.txt  Content.cpp  RootTile.cpp  Transform.cpp
src/CesiumGLTF/: CMakeLists.txt  CesiumB3DM.cpp  CesiumMesh.cpp  CesiumTexture.cpp
src/CesiumMath/: CMakeLists.txt  Cartesian3.cpp  SpatialReference.cpp  SpatialTransform.cpp
src/CesiumReadWrite/: CMakeLists.txt
src/Commons/: CMakeLists.txt  OSGSimplify.cpp  OSGUtil.cpp  TileStorage.cpp  TileStorageDisk.cpp
src/ConvertApp/: CMakeLists.txt  ConvertApp.cpp
src/OSGConvert/: B3DMTile.cpp  CMakeLists.txt  OSGFolder.cpp  OSGIndex.cpp  OSGLodVisitor.cpp  OSGMergeTopIndex.cpp  OSGNode.cpp  OSGParseVisitor.cpp  OSGTile.cpp  OSGTileMerge.cpp  OSGVIrtualFolder.cpp  OSGVirtualTile.cpp
test/: CMakeLists.txt  Test3DTiles.cpp  TestGDAL.cpp  TestOSGBConvert.cpp  TestOSGBConvertJob.cpp  TestOSGBLevel.cpp  test_3dtiles.cpp  test_gdal.cpp
test/data/: Tile_+007_+078.osgb  Tile_+007_+078_L15_0.osgb  Tile_+007_+078_L17_001.osgb  Tile_+007_+078_L17_003.osgb
tests/: CMakeLists.txt  TestOSGConvert.cpp  TestOSGFolder.cpp  TestOSGLodVisitor.cpp  TestOSGMergTopIndex.cpp  TestOSGParseVisitor.cpp  TestTemplate.h
(+9 files in other folders)
